# execlink

./: .gitignore  AGENT.MD  AGENTS.MD  LICENSE  README.md  index.html  install_kimi.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: AI_CLI_Dock_ConPTY_xterm_Tauri_PRD_DevPlan.md  AI_CLI_Switch_PRD_TechSpec.md  cli_install_assistance_discussion_2026-02-19.md  cli_install_methods_2026-02-19.md  context-menu-migration-checklist.md  context-menu-registry-schema-v2.md  newUI.md  nilesoft_source_level_feasibility_2026-03-02.md  notitle.md  plan.md  release_checklist.md  theme_attribution.md
scripts/: sync-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_launcher.rs  commands.rs  context_menu_builder.rs  context_menu_icons.rs  context_menu_model.rs  context_menu_registry.rs  context_menu_service.rs  detect.rs  embedded_terminal.rs  explorer.rs  logging.rs  main.rs  nilesoft.rs  nilesoft_install.rs  process_util.rs  shell_notify.rs  state.rs  terminal.rs  tray.rs  win11_classic_menu.rs
src-tauri/wix/: main.wxs
src/api/: tauri.ts
src/components/: AppConfirmDialog.tsx  CliConfigTable.tsx  CliStatusList.tsx  CustomTitleBar.tsx  GitInstallSourceDialog.tsx  NpmRegistrySourceDialog.tsx  PrimaryActionsBar.tsx  QuickSetupWizard.tsx  TerminalPanel.tsx  (+4 more)
tasks/: context-menu-registry-schema-v2.md  execlink_rust_no_nilesoft_refactor_plan.md  lessons.md  todo.md
updatenote/: 2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-22.md  2026-02-26.md  CHANGELOG.md
(+2 files in other folders)
