[package]
name = "execlink"
version = "0.2.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
