[package]
name = "execlink"
version = "0.2.11"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = ["Win32_UI_Shell"] }
winreg = "0.52"
